fixed share button on mobile

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ span {
   }
 
   .profile .tooltiptext,
-  .profile #share-btn {
+  .profile #share {
     display: none;
   }
 
